2002-01-26  Max Horn  <max@quendi.de>

	* Engine.pm (restart_as_root): Pass on more options to new instance

	* *.pm: Changed to use new is_verbose() function to determine verbosity
	
	* Config.pm (is_verbose): New function, returns true if verbose mode is on

	* Validation.pm: Only be verbose in verbose mode

	* Validation.pm: Warn on missing license field

2002-01-11  Max Horn  <max@quendi.de>

	* FinkVersion.pm.in: If /sw/fink/VERSION is missing, now tries to look
	at the old /sw/etc/fink-release file instead.

2002-01-10  Max Horn  <max@quendi.de>

	* FinkVersion.pm.in: moved fink-release from /sw/etc to /sw/fink and
	renamed it to VERSION to match with other modules

	* SelfUpdate.pm: fixed selfupdate, it would hang when trying to
	uncompress the package tar ball.

2002-01-05  Max Horn  <max@quendi.de>

	* Validation.pm: fixed stupid mistake

	* Validation.pm: Added /sw/lib/locale to list of deprecated directories;
	added some new fields to list of allowed fields (not yet used)

2001-12-28  Matthias Neeracher <neeracher@mac.com>

	* Package.pm: Added %package_hash which speeds up some operations
	enormously.

2001-12-27  Max Horn  <max@quendi.de>

	* Config.pm: Added $darwin_version and $macosx_version, reflecting
	the kernel/system versions.

	* Status.pm (initialize): Added pseudo packages 'darwin' and 'macosx'
	which can be used for dependencies on specific kernel/system versions.

2001-12-23  Max Horn  <max@quendi.de>

	* PkgVersion.pm (phase_install): Fixed bug occuring when removing the
	last 'perl' type package using UpdatePOD.

2001-12-21  Max Horn  <max@quendi.de>

	* PkgVersion.pm, Package.pm: Allow '+' in package names.

2001-12-20  Max Horn  <max@quendi.de>

	* SelfUpdate.pm (do_direct_cvs): Fixed CVS updating for core developers
	(CVS_RSH now always is set to 'ssh').

2001-12-12  Justin F. Hallett  <thesin@southofheaven.net>

	* PkgVersion.pm: Added UpdatePOD field, and added value "Perl" for
	the "type" field to better support perl packages
