@@ -1,5 +1,7 @@
 2002-01-26  Max Horn  <max@quendi.de>
 
+	* Validation.pm: Many more problems are detected now
+
 	* Engine.pm (restart_as_root): Pass on more options to new instance
 
 	* *.pm: Changed to use new is_verbose() function to determine verbosity
